# Trust-platform

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  justfile  mkdocs.yml
.cargo/: config.toml
crates/trust-dev/: Cargo.toml
crates/trust-dev/src/: agent.rs  build.rs  commit.rs  ctl.rs  git.rs  main.rs  prompt.rs  run.rs  style.rs  test.rs  workflow.rs
crates/trust-dev/src/agent/: harness.rs
crates/trust-dev/src/test_cmd/: command.rs  execute.rs  tests.rs
crates/trust-dev/tests/: cli_smoke.rs
crates/trust-hir/: Cargo.toml
crates/trust-hir-cli/: Cargo.toml
crates/trust-hir-cli/src/: daemon.rs  handlers.rs  main.rs  protocol.rs
crates/trust-hir/src/: diagnostics.rs  lib.rs  project.rs  semantic.rs  symbols.rs  types.rs
crates/trust-hir/src/db/: mod.rs  queries.rs  symbol_import.rs
crates/trust-hir/src/db/diagnostics/: complexity.rs  configuration.rs  context.rs  expression.rs  globals.rs  mod.rs  shared_globals.rs  type_check.rs  unreachable.rs  unused.rs
crates/trust-hir/src/db/diagnostics/oop/: interfaces.rs  mod.rs
crates/trust-hir/src/db/queries/: helpers.rs  project_types.rs  salsa_backend.rs
crates/trust-hir/src/db/queries/collector/: collect.rs  const_eval.rs  const_utils.rs  mod.rs  precollect.rs  types.rs  validation.rs  variables.rs
crates/trust-hir/src/db/queries/database/: database_part_01.rs  database_part_02.rs  database_tests_part_01.rs  database_tests_part_03.rs
crates/trust-hir/src/symbols/: defs.rs  table.rs
crates/trust-hir/src/type_check/: calls.rs  compatibility.rs  const_eval.rs  expr.rs  helpers.rs  literals.rs  mod.rs  ops.rs  standard.rs  stmt_impl_part_01.rs  stmt_impl_part_02.rs  stmt_impl_part_03.rs  stmt_impl_part_04.rs  symbol_resolve.rs  validation.rs
crates/trust-hir/src/type_check/calls/: args.rs  exprs.rs  resolve.rs  special.rs  standard_fbs.rs
crates/trust-hir/src/type_check/standard/: assertions.rs  bit.rs  comparison.rs  conversions_impl_part_01.rs  conversions_impl_part_02.rs  conversions_impl_part_03.rs  conversions_impl_part_04.rs  exprs.rs  numeric.rs  selection.rs  string.rs  time.rs
crates/trust-hir/src/types/: compat.rs  defs.rs  registry.rs
crates/trust-hir/tests/: action_blocks.rs  common.rs  declaration_catalog.rs  namespaces.rs  semantic_interfaces.rs  semantic_standard_functions.rs  semantic_type_checking.rs  semantic_type_definitions.rs  struct_fields.rs  symbol_invariants.rs  var_sections.rs
crates/trust-hir/tests/semantic_type_checking/: array_wildcard_compatibility.rs  assignments_and_var_access.rs  basics_and_warnings.rs  control_flow_and_calls.rs  enum_unqualified_in_expressions.rs  hir_mutation_hardening.rs  parameter_constant_qualifier.rs  pointer_param_write_through.rs  sizeof_semantics.rs  struct_initializers.rs  types_and_references.rs  wrong_kind_resolution.rs
crates/trust-hir/tests/snapshots/: iec_table_coverage__iec_table_coverage_report.snap
crates/trust-hmi-gen/: Cargo.toml
crates/trust-hmi-gen/src/: generator.rs  hmi_bindings.rs  hmi_init.rs  main.rs  project.rs
crates/trust-plcopen/: Cargo.toml
crates/trust-plcopen/src/: lib.rs
crates/trust-plcopen/src/plcopen/: codesys_export_meta.rs  codesys_structure.rs  contracts.rs  export.rs  import.rs  import_data_globals.rs  pou_interface.rs  profile.rs  source_parse.rs  tests.rs  xml_common.rs
crates/trust-plcopen/src/plcopen/tests/: export_profile.rs
crates/trust-runtime-core/: Cargo.toml
crates/trust-runtime-core/src/: cycle.rs  datetime.rs  error.rs  lib.rs  memory.rs  numeric.rs  retain.rs  scaffold.rs  scheduler.rs  task.rs  watchdog.rs
crates/trust-runtime-core/src/bytecode/: format.rs  mod.rs
crates/trust-runtime-core/src/bytecode/format/: header.rs  pou.rs  refs_consts.rs  types.rs
crates/trust-runtime-core/src/program_model/: expr.rs  initializers.rs  mod.rs  ops.rs  util.rs
crates/trust-runtime-core/src/program_model/ops/: contracts.rs  logical_cmp.rs
crates/trust-runtime-core/src/value/: datetime.rs  defaults.rs  mod.rs  partial_access.rs  reference.rs  size.rs  string_semantics.rs  types.rs
crates/trust-runtime-core/src/value/types/: tests.rs
crates/trust-runtime-core/src/vm/: const_pool.rs  dispatch_ops.rs  dispatch_sizeof.rs  errors.rs  frames.rs  helpers.rs  mod.rs  stack.rs
crates/trust-syntax/: Cargo.toml
crates/trust-syntax/src/lexer/tokens/: token_kind_impl_parsing.rs
crates/trust-syntax/src/parser/: mod.rs  parser.rs
crates/trust-syntax/src/parser/grammar/: declarations.rs  expressions.rs
crates/trust-syntax/src/parser/grammar/pou/: pou_part_01.rs  pou_part_04.rs  pou_part_05.rs
crates/trust-syntax/src/syntax/: mod.rs
crates/trust-syntax/tests/: parser_expressions.rs  parser_pous.rs  parser_types.rs  parser_variables.rs
crates/trust-syntax/tests/snapshots/: parser_complex__complete_function_block.snap  parser_expressions__time_builtin_call.snap  parser_pous__action.snap  parser_pous__test_function_block.snap  parser_types__string_type_with_parenthesized_length.snap
docs/: IEC_DECISIONS.md  IEC_DEVIATIONS.md  PLCOPEN_DECISIONS.md  PLCOPEN_DEVIATIONS.md  README.md
examples/: README.md
libraries/: README.md
manual-tests/: trust-lsp-smoke.code-workspace
scripts/: aggregate_st_test_flake_history.py  architecture_external_safety_ast_grep_gate.sh  architecture_external_safety_geiger_gate.sh  bootstrap_runtime_vm_syntax_corpus_local.sh  build_browser_analysis_wasm_spike.sh  capture-public-docs-visual-editors.sh  capture-readme-screenshots-auto.sh  cargo_test_fast_link.sh  check_diagram_drift.py  check_example_catalog_links.py  check_gate_observability.py  check_iec_log_paths.py  check_public_api_snapshots.sh  check_public_docs_assets.py  check_public_docs_ia.py  check_public_docs_links.py  check_public_docs_search.py  check_regression_test_first.py  check_zenoh_baseline.sh  generate_full_software_map_puml.py  generate_public_docs_media.py  hir_zero_silent_bug_doctor.py  hir_zero_silent_bug_mutation_shards.sh  prepush_ci_gate.sh  probe_st_test_flake.py  run_with_progress.py  runtime_boundary_fail_closed_ast_grep_gate.sh  (+25 more)
(+1219 files in other folders)
