[workspace]
resolver = "2"
members = [
    "xtask",
    "crates/trust-debug",
    "crates/trust-syntax",
    "crates/trust-hir",
    "crates/trust-ide",
    "crates/trust-lsp",
    "crates/trust-dev",
    "crates/trust-plcopen",
    "crates/trust-runtime-core",
    "crates/trust-runtime",
    "crates/trust-wasm-analysis",
    "crates/trust-hir-cli",
    "crates/trust-hmi-gen",
]
exclude = [
    "third_party/tiverse-mmap",
]

[workspace.package]
version = "0.24.17"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/boogy777-lgtm/Trust-platform"
rust-version = "1.95"
authors = ["Johannes Pettersson <johannes_salomon@hotmail.com>"]
keywords = ["lsp", "plc", "iec61131", "structured-text", "automation"]
categories = ["development-tools", "text-editors"]

[workspace.dependencies]
# Syntax
logos = "0.16"
rowan = "0.16"
text-size = "1.1"

# Semantic analysis
salsa = "0.26"

# LSP
tower-lsp = "0.20"
lsp-types = "0.97"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
urlencoding = "2"
percent-encoding = "2"
roxmltree = "0.21"
wasm-bindgen = "0.2"

# Error handling
thiserror = "2"
anyhow = "1"

# Testing
expect-test = "1.5"
insta = { version = "1", features = ["glob"] }

# Utilities
smol_str = "0.2.2"
rustc-hash = "2.1"
indexmap = "2"
drop_bomb = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.21"
parking_lot = "0.12"
crossbeam-channel = "0.5"
glob = "0.3"
crc32fast = "1"
ratatui = "0.30"
crossterm = "0.29"
dialoguer = "0.12"
indicatif = "0.18"
owo-colors = "4"
rumqttc = { version = "0.25", default-features = false, features = ["use-native-tls"] }
native-tls = { version = "0.2.18", features = ["alpn", "vendored"] }
time = "0.3.47"

# Internal crates
trust-syntax = { path = "crates/trust-syntax" }
trust-hir = { path = "crates/trust-hir" }
trust-ide = { path = "crates/trust-ide" }
trust-dev = { path = "crates/trust-dev" }
trust-plcopen = { path = "crates/trust-plcopen" }
trust-runtime-core = { path = "crates/trust-runtime-core" }
trust-runtime = { path = "crates/trust-runtime" }
trust-wasm-analysis = { path = "crates/trust-wasm-analysis" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
debug = 1
incremental = true

[profile.test]
debug = 1
incremental = true

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[patch.crates-io]
tiverse-mmap = { path = "third_party/tiverse-mmap" }
